-About content from presentation done. -Contact content from presentation done. -Toolbar fixed. -Tab active with color.

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,113 +1,196 @@
-<h1>Acerca de CUPN</h1>
-<div class="row" style="padding:50px 10px;border-bottom: 1px solid #f0f0f0;">
-  <div class="container" style="max-width: none;">
-    <div class="col-sm-4 text-justify">
-      <h2>ADVANTAGES</h2><br>
-      <h4>PELLENTESQUE SED DOLOR. ALIQUAM CONGUE FERMENTUM NISL </h4>
+<div class="container" style="max-width: none;">
+	<h1>Acerca de CUPN</h1>
+	<div class="row"
+		style="padding: 50px 10px; border-bottom: 1px solid #f0f0f0;">
+		<div class="container" style="max-width: none;">
+			<div class="col-sm-4 text-justify">
+				<h2>Ventajas Competitivas</h2>
+				<br>
+				<ol>
+					<li>La Escuela cuenta con el reconocimiento oficial de la SEP,
+						para la impartici&#243;n de clases en modalidad Plan Tetramestral
+						(Horarios flexibles en modalidad sabatina y virtual). Clave de
+						Incorporaci&#243;n 08PBH3702W.</li>
+					<br>
+					<li>Revalidaci&#243;n de materias en todos los tetramestres.</li>
+					<br>
+					<li>La Escuela cuenta con plataforma educativa virtual con
+						acceso desde cualquier dispositivo m&#243;vil.</li>
+					<br>
+					<li>Asesor&#237;as Educativas en L&#237;nea.</li>
+					<br>
+					<li>El Plantel cuenta con accesos controlados (Caseta y
+						Guardias de Seguridad).</li>
+					<br>
+					<li>Contamos con transporte escolar al plantel y tenemos
+						maestros altamente capacitados y certificados por el Departamento
+						de Educaci&#243;n Media Superior del Estado de Chihuahua.</li>
+					<br>
+					<li>Al contratar nuestros servicios, se elabora un contrato de
+						prestaci&#243;n de servicios educativos, ratificando ante la
+						autoridad Educativa del nivel Medio Superior de Estado de
+						Chihuahua.</li>
+				</ol>
+			</div>
+			<div class="col-sm-8 text-justify">
+				<h2>Quienes somos</h2>
+				<br>
+				<p class="text-jusfity">Sociedad Educativa del Norte SC. Es una
+					instituci&#243;n con el compromiso de abatir los &#237;ndices de
+					deserci&#243;n y/o reprobaci&#243;n, por ello conjugamos novedosos
+					programas de estudio, con diversas t&#233;cnicas de ense&#241;anza
+					y horarios flexibles. Nuestros servicios educativos van dirigidos a
+					todas aquellas personas que tengan deseos de estudiar ya que
+					algunos de nuestros programas educativos tienen un formato
+					dise&#241;ado especialmente para las personas con problemas de
+					horario debido a sus compromisos laborales, profesionales, etc.</p>
+				<br>
 
-      <p>
-        Fusce suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
-        lacus. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem.
-      </p><br>
-      <h4>PELLENTESQUE SED DOLOR. ALIQUAM CONGUE FERMENTUM NISL </h4>
+				<h2>Filosofia Institucional</h2>
+				<h3>Vision</h3>
+				<p class="well well-sm">Las instituciones se visualizan como
+					centros educativos cuya pertinencia y calidad acad&#233;mica sean
+					ampliamente reconocidas a trav&#233;s de la acreditaci&#243;n de
+					sus programas educativos, con la finalidad de formar y consolidar
+					sus cuerpos acad&#233;micos y certificar los procesos
+					administrativos en beneficio de la comunidad estudiantil y sus
+					egresados, buscando que estos tengan una formaci&#243;n integral,
+					sean responsables en su entorno y competentes internacionalmente,
+					contribuyendo al desarrollo sustentable de la regi&#243;n.</p>
 
-      <p>
-        Fusce suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
-        lacus. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem.
-      </p><br>
-      <h4>PELLENTESQUE SED DOLOR. ALIQUAM CONGUE FERMENTUM NISL </h4>
+				<h3>Mision</h3>
+				<p class="well well-sm">En las instituciones sabemos que la
+					grandeza de una comunidad, equipo o empresa radica en la grandeza
+					de sus individuos que la componen, es por ello que nuestra
+					misi&#243;n es: Promover el desarrollo integral de los estudiantes,
+					ya sea como individuo o bien como miembro de una comunidad o equipo
+					de trabajo, logrando con ello el desarrollo y crecimiento de las
+					empresas y colaborando as&#237; con el engrandecimiento de nuestra
+					regi&#243;n.</p>
+				<br>
+				<h2>Objetivos</h2>
+				<div class="well well-sm">
+					<p class="text-justify">Los centros educativos deben ser una
+						empresa altamente rentable, tanto para las personas que laboran en
+						ella como para las personas que estudian, se capacitan y entrenan
+						en el centro escolar.</p>
+					<p class="text-justify">Los planes, m&#233;todos, sistemas de
+						estudio y capacitaci&#243;n deben ser eficaces cubriendo siempre
+						los objetivos propuestos.</p>
+					<p class="text-justify">Estaremos siempre a la vanguardia de
+						planes, t&#233;cnicas, m&#233;todos y sistemas de
+						capacitaci&#243;n logrando as&#237; una mejora continua en
+						nuestras operaciones.</p>
+					<p class="text-justify">Nos esforzamos en todo momento en el
+						crecimiento constante y en el desarrollo de toda estructura, para
+						que cada vez, m&#225;s estudiantes puedan ser beneficiados en su
+						desarrollo humano.</p>
+					<p class="text-justify">Nuestra raz&#243;n de ser son nuestros
+						estudiantes, por tal motivo entregaremos el mejor servicio en su
+						tipo superando en todo momento sus expectativas en calidad y
+						servicio.</p>
+				</div>
 
-      <p>
-        Fusce suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
-        lacus. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem.
-      </p>
-    </div>
-    <div class="col-sm-8 text-justify">
-      <h2>A FEW WORDS ABOUT US</h2><br>
-      <h4>PELLENTESQUE SED DOLOR. ALIQUAM CONGUE FERMENTUM NISL. MAURIS ACCUMSAN NULLA VEL DIAM. SED IN LACUS UT ENIM
-        ADIPISCING ALIQUET. NULLA VENENATIS. IN PEDE MI, ALIQUET SIT AMET, EUISMOD IN, AUCTOR UT, LIGULA. ALIQUAM
-        DAPIBUS
-        TINCIDUNT METUS.</h4><br>
 
-      <p>
-        Fusce suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
-        lacus. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies
-        pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, conseteter
-        adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget,
-        elementum
-        vel, cursus eleifend, elit. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum
-        molestie
-        lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Lorem ipsum dolor sit amet,
-        consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Morbi nunc odio, gravida at, cursus nec,
-        luctus
-        a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec
-        sit
-        amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris fermentum dictum magna. Sed laoreet
-        aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit.
-      </p><br>
-      <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Morbi nunc odio,
-        gravida at, cursus nec, luctus a, lorem.</h4>
+				<br>
+				<h2>Valores</h2>
+				<div class="well well-sm">
+					<p class="text-justify">
+						Sin duda un de los valores mas importantes para nosotros es <b>nuestra
+							gente</b> por ello formamos un equipo en constante superaci&#243;n,
+						ocup&#225;ndonos en todo momento en su actualizaci&#243;n
+						acad&#233;mica.
+					</p>
+					<p class="text-justify">En la instituci&#243;n educativa
+						consideramos el trabajo en equipo como uno de nuestros pilares y
+						en donde radica una de nuestras mayores fortalezas encaminando
+						siempre a lograr los objetivos y la misi&#243;n que nos hemos
+						propuesto.</p>
+					<p class="text-justify">La constante observaci&#243;n y
+						an&#225;lisis de nuestros actos nos ayudan a superarnos
+						constantemente, solo con un an&#225;lisis, podemos darnos cuenta
+						de nuestros errores y corregirlos.</p>
+					<p class="text-justify">
+						<u>Flexibilidad:</u> Estamos conscientes de esto y consideramos la
+						flexibilidad como un pilar fundamental para la r&#225;pida
+						adaptaci&#243;n a los tiempos de cambio en que vivimos.
+					</p>
+					<p class="text-justify">
+						<u>Honestidad:</u> En todo momento observamos la transparencia,
+						honestidad y buenas costumbres en nuestros pensamientos y actos.
+					</p>
+					<p class="text-justify">
+						<u>Logro:</u> Nuestros esfuerzos est&#225;n siempre encaminados al
+						logro de nuestras metas, como principio de orden, disciplina y
+						voluntad.
+					</p>
+				</div>
+			</div>
+		</div>
 
-      <p>
-        Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet
-        eros.
-        Lorem ipsum dolor sit amet, conseteter adipiscing elit. Mauris fermentum dictum magna. Sed laoreet aliquam leo.
-        Ut
-        tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Lorem ipsum dolor sit amet, consectetuer
-        adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce
-        suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
-        lacus.
-        Morbi nunc odio, gravida at, cursus nec.
-      </p>
-    </div>
-  </div>
+	</div>
+	<div class="row"
+		style=" padding: 50px 10px; background-color: #F6F6F6;">
+		<div class="col-sm-4">
+			<h4>TESTIMONIALS</h4>
+			<br>
 
+			<p>
+				<i> Fusce suscipit varius mi. Lorem ipsum dolor sit amet,
+					consectetuer adipiscing elit. Praesent vestibulum molestie lacus.
+					Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas
+					tristique orci ac sem. Duis ultricies pharetra magna. Donec
+					accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit
+					amet, consectetuer adipiscing elit. </i> <br> <span
+					style="color: #FD6417">- Sara Tomson</span><br>
+			</p>
+			<br>
+
+			<p>
+				<i> Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+					Praesent vestibulum molestie lacus. Morbi nunc odio, gravida at,
+					cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis
+					ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit
+					amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing
+					elit. </i> <br> <span style="color: #FD6417">- Miranda
+					Lopez</span><br>
+			</p>
+			<br>
+
+			<p>
+				<i> Morbi nunc odio, gravida at, cursus nec, luctus a, lorem.
+					Maecenas tristique orci ac sem. Duis ultricies pharetra magna.
+					Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum
+					dolor sit amet, consectetuer adipiscing elit. </i> <br> <span
+					style="color: #FD6417">- Linda Grey</span><br>
+			</p>
+		</div>
+		<div class="col-sm-8">
+			<h4>PHOTOS</h4>
+
+			<div class="row">
+				<div class="col-sm-4">
+					<img style="width: 100%" src="images/page2_pic1.jpg" />
+				</div>
+				<div class="col-sm-4">
+					<img style="width: 100%" src="images/page2_pic2.jpg" />
+				</div>
+				<div class="col-sm-4">
+					<img style="width: 100%" src="images/page2_pic3.jpg" />
+				</div>
+			</div>
+			<br>
+
+			<div class="row">
+				<div class="col-sm-4">
+					<img style="width: 100%" src="images/page2_pic4.jpg" />
+				</div>
+				<div class="col-sm-4">
+					<img style="width: 100%" src="images/page2_pic5.jpg" />
+				</div>
+				<div class="col-sm-4"></div>
+			</div>
+		</div>
+	</div>
 </div>
-<div class="row" style="margin-top: 5px; padding:50px 10px;background-color: #F6F6F6;">
-  <div class="col-sm-4">
-    <h4>TESTIMONIALS</h4><br>
-
-    <p><i>
-      Fusce suscipit varius mi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie
-      lacus. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies
-      pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit.
-    </i>
-      <br><span style="color:#FD6417">- Sara Tomson</span><br>
-    </p>
-    <br>
-
-    <p><i>
-      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Morbi nunc odio,
-      gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec
-      accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-    </i>
-      <br><span style="color:#FD6417">- Miranda Lopez</span><br>
-    </p>
-    <br>
-
-    <p><i>
-      Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra
-      magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing
-      elit.
-    </i>
-      <br><span style="color:#FD6417">- Linda Grey</span><br>
-    </p>
-  </div>
-  <div class="col-sm-8">
-    <h4>PHOTOS</h4>
-
-    <div class="row">
-      <div class="col-sm-4"><img style="width:100%" src="images/page2_pic1.jpg"/></div>
-      <div class="col-sm-4"><img style="width:100%" src="images/page2_pic2.jpg"/></div>
-      <div class="col-sm-4"><img style="width:100%" src="images/page2_pic3.jpg"/></div>
-    </div>
-    <br>
-
-    <div class="row">
-      <div class="col-sm-4"><img style="width:100%" src="images/page2_pic4.jpg"/></div>
-      <div class="col-sm-4"><img style="width:100%" src="images/page2_pic5.jpg"/></div>
-      <div class="col-sm-4"></div>
-    </div>
-  </div>
-</div>
+<br>
