--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,17 +5,17 @@
 	<div>
 		<ul class="nav nav-tabs">
 			<li role="presentation" ng-class="{active:tab=='Aspirantes'}"><a
-				href ng-click="tab='Aspirantes'">Aspirantes</a></li>
+				href ng-click="tab='Aspirantes'"  ng-style="{'background-color':tab=='Aspirantes' ? '#E6E6F5' : null}">Aspirantes</a></li>
 			<li role="presentation" ng-class="{active:tab=='Alumnos'}"><a
-				href ng-click="tab='Alumnos'">Alumnos</a></li>
+				href ng-click="tab='Alumnos'" ng-style="{'background-color':tab=='Alumnos' ? '#E6E6F5' : null}">Alumnos</a></li>
 			<li role="presentation" ng-class="{active:tab=='Egresados'}"><a
-				href ng-click="tab='Egresados'">Egresados</a></li>
+				href ng-click="tab='Egresados'" ng-style="{'background-color':tab=='Egresados' ? '#E6E6F5' : null}">Egresados</a></li>
 			<li role="presentation" ng-class="{active:tab=='Academicos'}"><a
-				href ng-click="tab='Academicos'">Modalidad y Horarios</a></li>
+				href ng-click="tab='Academicos'" ng-style="{'background-color':tab=='Academicos' ? '#E6E6F5' : null}">Modalidad y Horarios</a></li>
 			<li role="presentation" ng-class="{active:tab=='Administrativos'}"><a
-				href ng-click="tab='Administrativos'">Administrativos</a></li>
+				href ng-click="tab='Administrativos'" ng-style="{'background-color':tab=='Administrativos' ? '#E6E6F5' : null}">Administrativos</a></li>
 			<li role="presentation" ng-class="{active:tab=='OfertaAcademica'}"><a
-				href ng-click="tab='OfertaAcademica'">Oferta Academica</a></li>
+				href ng-click="tab='OfertaAcademica'" ng-style="{'background-color':tab=='OfertaAcademica' ? '#E6E6F5' : null}">Oferta Academica</a></li>
 		</ul>
 		<div class="panel panel-default"
 			style="border-top: 0; border-radius: 0; min-height: 100px; padding: 20px;"
