--- a/app/views/contactus.html
+++ b/app/views/contactus.html
@@ -1,3 +1,4 @@
+<div class="container" style="max-width:none;">
 <h1>Información de Contacto</h1>
 <div class="row">
   <div class="col-sm-6">
@@ -6,32 +7,48 @@
       width="100%" height="275px" frameborder="0" style="border:0"></iframe>
   </div>
   <div class="col-sm-6">
-    <form class="form-horizontal" role="form">
-      <div class="form-group">
-        <div class="col-sm-4">
-          <label for="txtName">Name</label>
-          <input type="text" class="form-control" id="txtName"/>
-        </div>
-        <div class="col-sm-4">
-          <label for="txtEmail">Email</label>
-          <input type="text" class="form-control" id="txtEmail"/>
-        </div>
-        <div class="col-sm-4">
-          <label for="txtPhone">Phone</label>
-          <input type="text" class="form-control" id="txtPhone"/>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-12">
-          <label for="txtMessage">Message</label>
-          <textarea id="txtMessage" rows="8" class="form-control"></textarea>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-12">
-          <input type="button" class="btn pull-right" value="Enviar" style="width:80px;"/>
-        </div>
-      </div>
-    </form>
+  <pre>
+Av. JuarezPorvenir #220. Col. Zaragoza
+Av. Manuel J. Clouthier #10111 Juarez Nuevo  
+</pre>
+  
+<pre>TELEFONOS:  682-37-95 Y 679-94-65  |  FAX. 682-37-96</pre>
+<pre>CORREOS ELECTRONICOS: 
+
+<a href="mailto:imav220@hotmail.com">imav220@hotmail.com</a>
+
+<a href="mailto:Imav-calificaciones@outlook.com">Imav-calificaciones@outlook.com</a>
+
+<a href="mailto:cupn-imav@outlook.com">cupn-imav@outlook.com</a>
+</pre>  
+<!--     <form class="form-horizontal" role="form"> -->
+<!--       <div class="form-group"> -->
+<!--         <div class="col-sm-4"> -->
+<!--           <label for="txtName">Name</label> -->
+<!--           <input type="text" class="form-control" id="txtName"/> -->
+<!--         </div> -->
+<!--         <div class="col-sm-4"> -->
+<!--           <label for="txtEmail">Email</label> -->
+<!--           <input type="text" class="form-control" id="txtEmail"/> -->
+<!--         </div> -->
+<!--         <div class="col-sm-4"> -->
+<!--           <label for="txtPhone">Phone</label> -->
+<!--           <input type="text" class="form-control" id="txtPhone"/> -->
+<!--         </div> -->
+<!--       </div> -->
+<!--       <div class="form-group"> -->
+<!--         <div class="col-sm-12"> -->
+<!--           <label for="txtMessage">Message</label> -->
+<!--           <textarea id="txtMessage" rows="8" class="form-control"></textarea> -->
+<!--         </div> -->
+<!--       </div> -->
+<!--       <div class="form-group"> -->
+<!--         <div class="col-sm-12"> -->
+<!--           <input type="button" class="btn pull-right" value="Enviar" style="width:80px;"/> -->
+<!--         </div> -->
+<!--       </div> -->
+<!--     </form> -->
   </div>
+</div>
+
 </div>
