create profiles for careers

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -136,8 +136,8 @@
 					1:30pm<br>LUNES A VIERNES 8:00am a 1:30pm
 				</div>
 				<div class="col-sm-8">
-					<a href="">Oferta Académica</a><br> Aux. Tec. En Enfermeria<br> Aux.
-					Tec. En Terapia Fisica<br> Aux. Tec. En Urgencias Medicas<br>
+					<a href="">Oferta Académica</a><br> Aux. Tec. En Enfermeria<br>
+					Aux. Tec. En Terapia Fisica<br> Aux. Tec. En Urgencias Medicas<br>
 					Preparatoria semestral
 
 				</div>
@@ -148,9 +148,9 @@
 					HORARIOS FLEXIBLES<br> DIAS: SE ADECÚA A TUS NECESIDADES
 				</div>
 				<div class="col-sm-8">
-					<a href="">Oferta Académica</a><br> Lic. En Administración de Empresas<br>
-					Lic. En Contaduría Pública<br> Lic. En Derecho<br>
-					Preparatoria Tetramestral<br> Diplomados
+					<a href="">Oferta Académica</a><br> Lic. En Administración de
+					Empresas<br> Lic. En Contaduría Pública<br> Lic. En
+					Derecho<br> Preparatoria Tetramestral<br> Diplomados
 				</div>
 			</div>
 
@@ -224,14 +224,20 @@
 					<div class="row">
 						<div class="col-sm-4">08PSU5031F</div>
 
-						<div class="col-sm-4">Lic. En Contaduria Publica</div>
+						<div class="col-sm-4">
+							<a href="" data-toggle="modal" data-target="#modalLCP"> Lic.
+								En Contaduria Publica </a>
+						</div>
 
 						<div class="col-sm-4">20121432</div>
 					</div>
 					<div class="row">
 						<div class="col-sm-4">08PSU5031F</div>
 
-						<div class="col-sm-4">Lic. En Derecho</div>
+						<div class="col-sm-4">
+							<a href="" data-toggle="modal" data-target="#modalLD"> Lic.
+								En Derecho </a>
+						</div>
 
 						<div class="col-sm-4">20121433</div>
 					</div>
@@ -304,23 +310,21 @@
 		</div>
 
 
-<br>
-<br>
-<br>
+		<br> <br> <br>
 
 		<div class="row">
 			<div class="col-sm-1"></div>
 			<div class="col-sm-10">
 				<h2 class="text-center">MODALIDAD VIRTUAL</h2>
 				<h3 class="text-center">Introduccion</h3>
-				<p class="text-justify">El uso de las nuevas tecnologías en la educación transforma
-					el proceso de aprendizaje y, por tanto, los comportamientos de los
-					que enseñan y de los que aprenden.   Se modifican los roles
-					tradicionales del docente y el alumno. La enseñanza bajo esta
-					modalidad supone una disminución de la jerarquía y la directividad,
-					al tiempo que estimula el trabajo autónomo del alumno y exige que
-					el profesor sea un animador y un tutor del proceso de aprendizaje
-					del alumno.</p>
+				<p class="text-justify">El uso de las nuevas tecnologías en la
+					educación transforma el proceso de aprendizaje y, por tanto, los
+					comportamientos de los que enseñan y de los que aprenden.   Se
+					modifican los roles tradicionales del docente y el alumno. La
+					enseñanza bajo esta modalidad supone una disminución de la
+					jerarquía y la directividad, al tiempo que estimula el trabajo
+					autónomo del alumno y exige que el profesor sea un animador y un
+					tutor del proceso de aprendizaje del alumno.</p>
 				<br>
 
 				<hr
@@ -330,26 +334,26 @@
 					style="margin: auto; border-bottom: none; border-top: 1px solid #d1d1d1; width: 450px; display: block;">
 				<br>
 
-					<h3 class="text-center">Descripcion</h3>
-					<p class="text-justify">La posibilidad que las tecnologías ofrecen de acceder
-						rápidamente a una gran cantidad de información hace necesario que
-						el profesor complemente su tradicional actividad transmisora de
-						conocimientos con un esfuerzo de "aprendizaje de su propio
-						conocimiento a partir del conjunto de recursos de información
-						disponible.   Aprender en un entorno con estas características
-						supone, por una parte, la flexibilidad en los tiempos y espacios
-						destinados al aprendizaje y, por otra, el protagonismo de la
-						interacción entre los participantes del proceso para la
-						construcción de conocimientos significativos. De este modo, un
-						aprendizaje virtual interactivo debe diseñar estrategias que
-						posibiliten la interacción sincrónica y asincrónica efectiva
-						entre: alumno-contenido.</p>
+				<h3 class="text-center">Descripcion</h3>
+				<p class="text-justify">La posibilidad que las tecnologías
+					ofrecen de acceder rápidamente a una gran cantidad de información
+					hace necesario que el profesor complemente su tradicional actividad
+					transmisora de conocimientos con un esfuerzo de "aprendizaje de su
+					propio conocimiento a partir del conjunto de recursos de
+					información disponible.   Aprender en un entorno con estas
+					características supone, por una parte, la flexibilidad en los
+					tiempos y espacios destinados al aprendizaje y, por otra, el
+					protagonismo de la interacción entre los participantes del proceso
+					para la construcción de conocimientos significativos. De este modo,
+					un aprendizaje virtual interactivo debe diseñar estrategias que
+					posibiliten la interacción sincrónica y asincrónica efectiva entre:
+					alumno-contenido.</p>
 
 				<br> <br>
 
 			</div>
 		</div>
-		
+
 
 		<div class="row"
 			style="width: 100%; padding-bottom: 50px; border-bottom: 1px solid #f0f0f0;">
@@ -503,14 +507,127 @@
 						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
-					<h4 class="modal-title" id="labelTitleLAE">Licenciatura en
-						Administracion de Empresas</h4>
+					<h4 class="modal-title" id="labelTitleLAE" style="font-family: t;">Licenciatura
+						en Administracion de Empresas</h4>
+					<h4 style="color: rgb(5, 109, 163)">PERFIL DE INGRESO:</h4>
+					<p class="text-justify">Un Licenciado en Administración de
+						Empresas es un profesional con visión estratégica capaz de crear,
+						gestionar y dirigir de manera eficiente y eficaz las
+						organizaciones en la era del conocimiento, coordinar el capital
+						humano, administrar tecnología y recursos mediante la innovación
+						en los procesos de negocios. Su formación se caracteriza
+						enfáticamente en la conceptualización y soporte de la estrategia
+						local y global de la organización, en la toma de decisiones
+						analítica, en la estructuración de los procesos de inteligencia
+						para gestión de negocios; sustentada en un enfoque sistemático,
+						ético y humanista.</p>
+					<h4 style="color: rgb(5, 109, 163)">PERFIL DE EGRESADO:</h4>
+					<p class="text-justify">El Administrador de Empresas es un
+						profesional con alto grado de responsabilidad y creatividad,
+						comprometido en el ejercicio de un liderazgo entusiasta, capaz de
+						aplicar y desarrollar habilidades de dirección, comunicación y de
+						sinergia en cualquier tipo de organización; está apto asimismo
+						para la toma de decisiones acertadas y la adaptabilidad al cambio.</p>
 				</div>
 				<div class="modal-body">
-					<img src="/images/logo.png">
+					<img src="/images/materiasLAE.png" width="100%">
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Modal -->
+	<div class="modal fade" id="modalLCP" tabindex="-1" role="dialog"
+		aria-labelledby="modalLCP" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title" id="labelTitleLAE" style="font-family: t;">Licenciatura
+						en Contaduría Pública</h4>
+					<h4 style="color: rgb(5, 109, 163)">PERFIL DE INGRESO:</h4>
+					<p class="text-justify">UEl Licenciado en Contaduría Pública
+						debe ser un conocedor de la economía del país, con capacidad
+						analítica, interpretativa y organizativa, aplicable en el área
+						financiera y económica de las empresas, tanto públicas como
+						privadas. Toma decisiones en lo referente a los sistemas
+						contables, su implantación, aplicación, control y evaluación.
+						Asimismo, actúa como asesor en los problemas contables y
+						financieros; funge como fiscalizador de las actividades
+						organizacionales. Actúa como Auditor de empresas públicas y
+						privadas, tanto con fines judiciales como administrativos. El
+						Contador Público es el profesional responsable de manejar sistemas
+						de información financiera, conocer leyes fiscales, etc., y
+						dictaminar estados financieros, todo con el fin de lograr un mejor
+						aprovechamiento de los recursos de una entidad pública o privada.
+					</p>
+					<h4 style="color: rgb(5, 109, 163)">PERFIL DE EGRESADO:</h4>
+					<p class="text-justify">EEl egresado de la Licenciatura en
+						Contaduría Pública estará capacitado para resolver problemas
+						profesionales en nuestro medio tales como organizar grupos humanos
+						para el logro de objetivos, asesorar y tomar decisiones en materia
+						contable, fiscal, administrativa y financiera, operar
+						documentación oficial, y con los conocimientos adquiridos diseñar
+						procedimientos administrativos, utilizar modernos sistemas de
+						computación, analizar e interpretar estados financieros en una
+						entidad así como captar y registrar el origen y aplicación de
+						recursos de una transacción; además de tener una visión analítico-
+						sintético que le permita ejercer un amplio criterio profesional.</p>
+				</div>
+				<div class="modal-body">
+					<img src="/images/materiasLCP.png" width="100%">
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Modal -->
+	<div class="modal fade" id="modalLD" tabindex="-1" role="dialog"
+		aria-labelledby="modalLD" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title" id="labelTitleLAE" style="font-family: t;">Licenciatura
+						en Derecho</h4>
+					<h4 style="color: rgb(5, 109, 163)">PERFIL DE INGRESO:</h4>
+					<p class="text-justify">El aspirante al programa de
+						Licenciatura en Derecho, deberá contar con conocimientos en el
+						área de ciencias sociales y humanas; con habilidades para la
+						reflexión crítica, el análisis, la síntesis, la lectura, la
+						expresión oral y escrita, y la utilización de los medios de
+						información y comunicación; así como actitudes y valores
+						orientados a la justicia social y el respeto a los derechos
+						humanos.</p>
+					<h4 style="color: rgb(5, 109, 163)">PERFIL DE EGRESADO:</h4>
+					<p class="text-justify">EEl egresado del programa de
+						Licenciatura en Derecho conocerá, interpretará y aplicará a través
+						de la argumentación oral y escrita la norma jurídica en la
+						solución de casos concretos; desarrollara investigaciones
+						innovadoras que contribuyan al fortalecimiento del Estado
+						democrático y social de derecho y coadyuven a la solución de
+						problemas sociales; contara con una formación integral inter y
+						multidisciplinaria sustentada en principios éticos, humanísticos y
+						científicos; comprometido con el desarrollo sustentable para
+						lograr un mejor nivel de vida.</p>
+				</div>
+				<div class="modal-body">
+					<img src="/images/materiasLD.png" width="100%">
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
 				</div>
 			</div>
 		</div>
