-Some visual improvements.

--- a/app/views/contactus.html
+++ b/app/views/contactus.html
@@ -4,7 +4,7 @@
   <div class="col-sm-6">
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3396.0505038119973!2d-106.38881500000001!3d31.659837999999986!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e75d773c444277%3A0x67287cf5e62a5b5a!2sInstituto+de+Estudios+Superiores+Ciudad+Ju%C3%A1rez+A.C.!5e0!3m2!1sen!2smx!4v1414775838279"
-      width="100%" height="275px" frameborder="0" style="border:0"></iframe>
+      width="100%" height="550px" frameborder="0" style="border:0"></iframe>
   </div>
   <div class="col-sm-6">
   <pre>
@@ -21,33 +21,33 @@ Av. Manuel J. Clouthier #10111 Juarez Nuevo
 
 <a href="mailto:cupn-imav@outlook.com">cupn-imav@outlook.com</a>
 </pre>  
-<!--     <form class="form-horizontal" role="form"> -->
-<!--       <div class="form-group"> -->
-<!--         <div class="col-sm-4"> -->
-<!--           <label for="txtName">Name</label> -->
-<!--           <input type="text" class="form-control" id="txtName"/> -->
-<!--         </div> -->
-<!--         <div class="col-sm-4"> -->
-<!--           <label for="txtEmail">Email</label> -->
-<!--           <input type="text" class="form-control" id="txtEmail"/> -->
-<!--         </div> -->
-<!--         <div class="col-sm-4"> -->
-<!--           <label for="txtPhone">Phone</label> -->
-<!--           <input type="text" class="form-control" id="txtPhone"/> -->
-<!--         </div> -->
-<!--       </div> -->
-<!--       <div class="form-group"> -->
-<!--         <div class="col-sm-12"> -->
-<!--           <label for="txtMessage">Message</label> -->
-<!--           <textarea id="txtMessage" rows="8" class="form-control"></textarea> -->
-<!--         </div> -->
-<!--       </div> -->
-<!--       <div class="form-group"> -->
-<!--         <div class="col-sm-12"> -->
-<!--           <input type="button" class="btn pull-right" value="Enviar" style="width:80px;"/> -->
-<!--         </div> -->
-<!--       </div> -->
-<!--     </form> -->
+    <form class="form-horizontal" role="form">
+      <div class="form-group">
+        <div class="col-sm-4">
+          <label for="txtName">Name</label>
+          <input type="text" class="form-control" id="txtName"/>
+        </div>
+        <div class="col-sm-4">
+          <label for="txtEmail">Email</label>
+          <input type="text" class="form-control" id="txtEmail"/>
+        </div>
+        <div class="col-sm-4">
+          <label for="txtPhone">Phone</label>
+          <input type="text" class="form-control" id="txtPhone"/>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-12">
+          <label for="txtMessage">Message</label>
+          <textarea id="txtMessage" rows="8" class="form-control"></textarea>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-12">
+          <input type="button" class="btn pull-right" value="Enviar" style="width:80px;"/>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
 
